[package]
name = "elrond_dex_router"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.18"
path = "../../../elrond-wasm-rs/elrond-wasm"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.18"
path = "../../../elrond-wasm-rs/elrond-wasm-node"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18"
path = "../../../elrond-wasm-rs/elrond-wasm-debug"

[dependencies.elrond_dex_pair]
path = "../elrond_dex_pair"

