[package]
name = "token_supply"
version = "0.0.0"
authors = [ "catalin-neagu <catalin.neagu@elrond.com>",]
edition = "2018"

[lib]
path = "src/token_supply.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.common_structs]
path = "../../common_structs"

[dependencies.elrond-wasm]
version = "0.18"
path = "../../../../elrond-wasm-rs/elrond-wasm"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.18"
path = "../../../../elrond-wasm-rs/elrond-wasm-node"
optional = true
