[package]
name = "elrond_dex_farm-abi"

version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[dependencies.elrond_dex_farm]
path = ".."

[dependencies.elrond-wasm]
version = "0.18"
path = "../../../../elrond-wasm-rs/elrond-wasm"
features = ["derive"]

[dependencies.elrond-wasm-debug]
version = "0.18"
path = "../../../../elrond-wasm-rs/elrond-wasm-debug"
