[package]
name = "multi_token_farm-abi"

version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[dependencies.multi_token_farm]
path = ".."

[dependencies.elrond-wasm]
version = "0.18"
features = ["derive"]
path = "../../../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-debug]
version = "0.18"
path = "../../../../elrond-wasm-rs/elrond-wasm-debug"
